# Simulation_Prediction

./: README.md
Model_Training_on_Manual_Allocation_Data/Edge_Classification/: Edge_Classification.ipynb  Route_generation.ipynb  classfied_edge_ids.txt  edge_2_static_features_dict.csv  multi.rou.xml
Model_Training_on_Manual_Allocation_Data/Model_Training/: light_weight_model_training.ipynb
Model_Training_on_Manual_Allocation_Data/SUMO_Simulation/: TraCI_Python_Adjusted.py  map.sumo.cfg
Realistic_Event_Data_Generation_Procedure/: count_edges_and_nodes.py  map.sumo.cfg  rerouteTrips.py
Traffic_Simulation_Prediction/Simulation_Prediction/: CMakeLists.txt  data_preparation.cpp  deletion_operation.cpp  eta_update.cpp  head.h  main.cpp  simulation.cpp  update.cpp
Traffic_Simulation_Prediction/Simulation_Prediction/Manhattan_Data/: Manhattan_network_BJ.txt  Manhattan_network_min_Travel_Time.txt  Model_Catching.ipynb  xml_data_2_txt 2.ipynb
